--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- header  -->
     <div class="header">
         <div class="container">
-           <a href="index.html"> <img class="logo" src="assets/img/logo2.png" alt="logo"></a>
+           <a href="index.html"> <img class="logo" src="assets/logo2.png" alt="logo"></a>
             <div class="profile">
                 <i class="fa-solid fa-cart-shopping" ></i>
                 <i class="fa-solid fa-user" ></i>
@@ -78,7 +78,7 @@
         <!--Video Section -->
         <div class="video-background">
             <video autoplay muted loop id="bg-video">
-                <source src="assets/vid/Ride the future with our Electric Bikes.mp4" type="video/mp4">
+                <source src="assets/Ride the future with our Electric Bikes.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
 
@@ -95,7 +95,7 @@
             <h1>BEST DEALS</h1>
             <div class="deals-container">
                 <div class="deal-card">
-                    <img src="assets/img/1.jpg" alt="bike">
+                    <img src="assets/1.jpg" alt="bike">
                     <p>Lorem ipsum dolor sit amet</p>
                     <div class="price-discount">
                         <p class="discount">28% off</p>
@@ -105,7 +105,7 @@
                     <button>Add to cart</button>
                 </div>
                 <div class="deal-card">
-                    <img src="assets/img/2.jpg" alt="bike">
+                    <img src="assets/2.jpg" alt="bike">
                     <p>Lorem ipsum dolor sit amet</p>
                     <div class="price-discount">
                         <p class="discount">28% off</p>
@@ -115,7 +115,7 @@
                     <button>Add to cart</button>
                 </div>
                 <div class="deal-card">
-                    <img src="assets/img/3.jpg" alt="bike">
+                    <img src="assets/3.jpg" alt="bike">
                     <p>Lorem ipsum dolor sit amet</p>
                     <div class="price-discount">
                         <p class="discount">28% off</p>
@@ -125,7 +125,7 @@
                     <button>Add to cart</button>
                 </div>
                 <div class="deal-card">
-                    <img src="assets/img/4.jpg" alt="bike">
+                    <img src="assets/4.jpg" alt="bike">
                     <p>Lorem ipsum dolor sit amet</p>
                     <div class="price-discount">
                         <p class="discount">28% off</p>
@@ -153,7 +153,7 @@
             <div class="about-content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit doloribus architecto, nobis nam esse fuga sequi officia nihil sed laboriosam atque maxime? Quasi at, delectus maiores alias accusantium eligendi esse?</p> 
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque, consectetur cum. Ipsum ipsam dolore inventore totam dolorem. Deleniti distinctio, saepe aperiam dicta quasi fuga qui praesentium cupiditate neque dolores labore.</p><br>
-                <img src="assets/img/D_H03Outlet.jpg" alt="Girl riding a bike">
+                <img src="assets/D_H03Outlet.jpg" alt="Girl riding a bike">
             </div>
         </div>
 
